# tsfontconverter

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
src/: __init__.py  tsfontconverter.py
src/fontmodel/: FontInfo.py  FontMetadata.py
src/fontparser/: fontparser.py
src/tsfontconverter/: __init__.py  tsfontconverter.py
src/tsfontconverter/fontmodel/: CharacterMap.py  Font.py  FontInfo.py  FontMetadata.py  FontStandard.py  Glyph.py  Meta.py
src/tsfontconverter/fontparser/: fontparser.py  reflectionutils.py
src/tsfontconverter/typescript/: pytsconverter.py
tests/: tsfontconvertertest.py  typescript_definition_test.py
