[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tsfontconverter"
version = "0.25"
dependencies = [
    "fonttools",
    "pytest",
    "python-dotenv",
]
authors = [
    { name = "Thor Christopher Arisland", email = "thor.arisland@gmail.com" }
]
description = "Converts fonts to TypeScript objects"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]

[project.scripts]
tsfontconverter = "tsfontconverter:main"
